# offense-bias

./: .gitignore  README.md  analyze_superset_claude.py  badmatr11x_multi-roberta_bias.py  berkeley_claude_bias.py  berkeley_claude_bias2.py  berkeley_gemini-flash_bias.py  claude_predictions.csv  claude_predictions_sample.csv  dynamical_multi-roberta.py  plot_superset_claude.py  plot_superset_claude_paper.py  pyproject.toml  superset_claude.py  superset_multi-roberta.py  test_claude_superset.py  test_explain.py  test_superset.py
bias_analysis_2025-06-10_00-08-53/: bias_analysis_summary.txt  test_bias_metrics.json  test_processed_data.csv  train_bias_metrics.json  train_processed_data.csv  validation_bias_metrics.json  validation_processed_data.csv
bias_analysis_2025-06-10_19-55-03/: bias_analysis_summary.txt  test_bias_metrics.json  test_processed_data.csv  train_bias_metrics.json  train_processed_data.csv  validation_bias_metrics.json  validation_processed_data.csv
cache/: claude_predictions_cache.pkl  sample_selection_cache.pkl
outputs/0610_17:38/: claude_predictions_comprehensive.csv  claude_predictions_comprehensive_country_stats.csv
outputs/0610_18:11/: claude_predictions_comprehensive.csv  claude_predictions_comprehensive_country_stats.csv  claude_predictions_comprehensive_summary.json  detailed_metrics.json
outputs/0610_19:37/: claude_predictions_comprehensive.csv  claude_predictions_comprehensive_country_stats.csv  claude_predictions_comprehensive_summary.json  detailed_metrics.json
outputs/0610_20:54/: claude_predictions_comprehensive_country_stats.csv
(+42 files in other folders)
